--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,19 +3,14 @@ dependencies: []
 
 galaxy_info:
   author: Victor da Costa
-  description: Role to setup phillyapp
-  company: Red Hat, Inc
+  description: Simple Role to Deploy an Java Webapp taken from maven repository.
+  company: victorock
   license: GPLv3
   min_ansible_version: 2.5
   platforms:
-    - name: Fedora
-      versions:
-        - 25
-        - 26
-        - 27
     - name: EL
       versions:
         - 7
   galaxy_tags:
-    - phillyapp
+    - java
     - webapp
